--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Categories#new</h1>
 <p>Find me in app/views/categories/new.html.erb</p>
 <div class="col-8">
+    <p> test</p>
     <%= simple_form_for @category do |f| %>
       <%= f.input :name %>
 			<%= f.input :description %>
