--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -42,6 +42,6 @@
 					<% end %>
 				</ul>
 			</div>
-      <%= link_to "View all", communities_path, class: "btn btn-primary mt-2" %>
+      <%= link_to "View all", communities_path, class: "btn btn-primary mt-2 corner-button" %>
     </div>
   </div>
