--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@
 .trending-communities-header {
 	color: white;
 	text-align: center;
-	background: image-url('transparent-texture.png'), $red;
+	background: image-url("transparent-texture.png"), $red;
 	background-position: center;
 	width: 100%;
 	padding: 30px 10px;
@@ -32,6 +32,10 @@
 }
 
 .main-index-column {
-	min-width: 700px;
 	padding-right: 40px;
+}
+
+.corner-button {
+	position: absolute;
+	bottom: 0px;
 }
