--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,17 +2,17 @@
 
 	<ul class='list-unstyled sidebar-links'>
 		<li clasS=''>
-			<%= link_to "O teu feed", edit_user_registration_path, class: "sidebar-point" %>
+			<%= link_to "O teu feed", '/', class: "sidebar-point" %>
 		</li>
 		<li clasS=''>
-			<%= link_to "Plataforma", edit_user_registration_path, class: "sidebar-point" %>
+			<%= link_to "Plataforma", '/', class: "sidebar-point" %>
 		</li>
 		
 		<li clasS=''>
-			<%= link_to "Explora", edit_user_registration_path, class: "sidebar-point" %>
+			<%= link_to "Explora", '/', class: "sidebar-point" %>
 		</li>
 		<li clasS=''>
-			<%= link_to "Comunidades", edit_user_registration_path, class: "sidebar-point" %>
+			<%= link_to "Comunidades", communities_path, class: "sidebar-point" %>
 		</li>
 	</ul>
 
